emi, finish forge and recipe book