@@ -1,15 +1,17 @@
 package de.hysky.skyblocker.skyblock.itemlist.recipes;
 
 import de.hysky.skyblocker.SkyblockerMod;
+import de.hysky.skyblocker.utils.ItemUtils;
 import io.github.moulberry.repo.data.NEUForgeRecipe;
 import net.minecraft.client.gui.ScreenPos;
 import net.minecraft.item.ItemStack;
 import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
-import net.minecraft.util.math.MathHelper;
 import org.jetbrains.annotations.Nullable;
+import org.joml.Vector2i;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class SkyblockForgeRecipe implements SkyblockRecipe {
@@ -30,23 +32,36 @@ public class SkyblockForgeRecipe implements SkyblockRecipe {
         List<RecipeSlot> out = new ArrayList<>();
         int centerX = width / 2;
         int centerY = height / 2;
-        float radius = getRadius();
+
+        Vector2i radius = getRadius();
+        int startX = (int) (centerX / 2.f - (radius.x / 2.f) * 18);
+        int startY = (int) (centerY - (radius.y / 2.f) * 18);
+
         for (int i = 0; i < inputs.size(); i++) {
-            float angle = 2 * MathHelper.PI * (float) i / (float) inputs.size();
-            int x = (int) (MathHelper.cos(angle) * radius);
-            int y = (int) (MathHelper.sin(angle) * radius);
-            out.add(new RecipeSlot(Math.max(centerX / 2, (int) radius + 14) - 9 + x, centerY - 9 + y, inputs.get(i)));
+            int x = startX + (i % radius.x) * 18;
+            int y = startY + (i / radius.x) * 18;
+            out.add(new RecipeSlot(x, y, inputs.get(i)));
         }
         return out;
     }
 
-    private float getRadius() {
-        return Math.max(26 * inputs.size() / (2 * MathHelper.PI), 20);
+    private Vector2i getRadius() {
+        int gridWidth;
+        int gridHeight;
+
+        int sqrt = gridHeight = gridWidth = (int) Math.sqrt(inputs.size());
+        float percentage = (inputs.size() - sqrt * sqrt) / (float) ((sqrt+1)*(sqrt+1) - sqrt*sqrt);
+
+        if (percentage > 0.005f) {
+            gridWidth++;
+            if (percentage > 0.6) gridHeight++;
+        }
+        return new Vector2i(gridWidth, gridHeight);
     }
 
     @Override
     public List<RecipeSlot> getOutputSlots(int width, int height) {
-        return List.of(new RecipeSlot(width / 2 + 37, height / 2 - 9, output));
+        return Collections.singletonList(new RecipeSlot(Math.max(3 * width / 4, width / 2 + 30), height / 2 - 9, output));
     }
 
     @Override
@@ -56,7 +71,7 @@ public class SkyblockForgeRecipe implements SkyblockRecipe {
 
     @Override
     public List<ItemStack> getOutputs() {
-        return List.of(output);
+        return Collections.singletonList(output);
     }
 
     @Override
@@ -69,9 +84,12 @@ public class SkyblockForgeRecipe implements SkyblockRecipe {
         return IDENTIFIER;
     }
 
+    public Identifier getRecipeIdentifier() {
+        return Identifier.of("skyblock", ItemUtils.getItemId(output).toLowerCase().replace(';', '_') + "_" + output.getCount());
+    }
+
     @Override
     public @Nullable ScreenPos getArrowLocation(int width, int height) {
-        float v = (3 * width) / 4.f;
-        return new ScreenPos((int) ((v + getRadius() + 9 + 37 - 24) / 2), height / 2 - 9);
+        return new ScreenPos(width / 2, height / 2 - 9);
     }
 }
